Made letter windows bigger and fixed top text visibility

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
 }
 
 .letter-window {
-    width: 90vw;
+    width: 500px;
     max-width: 800px;
     aspect-ratio: 3/2;
     padding: 20px 20px 0 20px;
@@ -57,7 +57,7 @@ body {
     background-position: center;
     border-radius: 12px;
     gap: 1px;
-    padding-top: 180px;
+    padding-top: 40px;
 
     transform: scale(1.2);
     opacity: 0;
@@ -137,7 +137,7 @@ p {
     padding: 10px 20px;
     background-color: rgba(255, 240, 240, 0.5);
     border-radius: 12px;
-    max-height: 400px;
+    max-height: 600px;
     overflow-y: auto;
 }
 }
